parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> decl_or_stmt_list
Rule 2     decl_or_stmt_list -> decl_or_stmt_list decl_or_stmt
Rule 3     decl_or_stmt_list -> decl_or_stmt
Rule 4     decl_or_stmt -> var_decl
Rule 5     decl_or_stmt -> func_decl
Rule 6     decl_or_stmt -> statement
Rule 7     var_decl -> type ID SEMICOLON
Rule 8     var_decl -> type ID ASSIGN expr SEMICOLON
Rule 9     var_decl -> type ID LBRACKET INT_LITERAL RBRACKET SEMICOLON
Rule 10    type -> INT
Rule 11    type -> FLOAT
Rule 12    type -> BOOL
Rule 13    type -> CHAR
Rule 14    type -> STRING
Rule 15    func_decl -> FUNC ID LPAREN param_list_opt RPAREN block
Rule 16    param_list_opt -> param_list
Rule 17    param_list_opt -> empty
Rule 18    param_list -> param_list COMMA param
Rule 19    param_list -> param
Rule 20    param -> type ID
Rule 21    block -> LBRACE decl_or_stmt_list RBRACE
Rule 22    statement -> assignment SEMICOLON
Rule 23    statement -> if_stmt
Rule 24    statement -> while_stmt
Rule 25    statement -> for_stmt
Rule 26    statement -> io_stmt SEMICOLON
Rule 27    statement -> return_stmt SEMICOLON
Rule 28    statement -> BREAK SEMICOLON
Rule 29    statement -> CONTINUE SEMICOLON
Rule 30    statement -> block
Rule 31    statement -> func_call SEMICOLON
Rule 32    func_call -> ID LPAREN arg_list_opt RPAREN
Rule 33    assignment -> location ASSIGN expr
Rule 34    location -> ID
Rule 35    location -> ID LBRACKET expr RBRACKET
Rule 36    if_stmt -> IF LPAREN expr RPAREN block elif_part else_part_opt
Rule 37    elif_part -> ELIF LPAREN expr RPAREN block elif_part
Rule 38    elif_part -> empty
Rule 39    else_part_opt -> ELSE block
Rule 40    else_part_opt -> empty
Rule 41    while_stmt -> WHILE LPAREN expr RPAREN block
Rule 42    for_stmt -> FOR LPAREN assignment SEMICOLON expr SEMICOLON assignment RPAREN block
Rule 43    io_stmt -> PRINT LPAREN expr RPAREN
Rule 44    io_stmt -> INPUT LPAREN ID RPAREN
Rule 45    return_stmt -> RETURN expr
Rule 46    return_stmt -> RETURN
Rule 47    expr -> logic_or_expr
Rule 48    logic_or_expr -> logic_or_expr OR logic_and_expr
Rule 49    logic_or_expr -> logic_and_expr
Rule 50    logic_and_expr -> logic_and_expr AND equality_expr
Rule 51    logic_and_expr -> equality_expr
Rule 52    equality_expr -> equality_expr EQ relational_expr
Rule 53    equality_expr -> equality_expr NE relational_expr
Rule 54    equality_expr -> relational_expr
Rule 55    relational_expr -> relational_expr LT additive_expr
Rule 56    relational_expr -> relational_expr LE additive_expr
Rule 57    relational_expr -> relational_expr GT additive_expr
Rule 58    relational_expr -> relational_expr GE additive_expr
Rule 59    relational_expr -> additive_expr
Rule 60    additive_expr -> additive_expr PLUS term
Rule 61    additive_expr -> additive_expr MINUS term
Rule 62    additive_expr -> term
Rule 63    term -> term TIMES factor
Rule 64    term -> term DIVIDE factor
Rule 65    term -> term MOD factor
Rule 66    term -> factor
Rule 67    factor -> NOT factor
Rule 68    factor -> MINUS factor
Rule 69    factor -> LPAREN expr RPAREN
Rule 70    factor -> INT_LITERAL
Rule 71    factor -> FLOAT_LITERAL
Rule 72    factor -> TRUE
Rule 73    factor -> FALSE
Rule 74    factor -> CHAR_LITERAL
Rule 75    factor -> STRING_LITERAL
Rule 76    factor -> location
Rule 77    factor -> ID LPAREN arg_list_opt RPAREN
Rule 78    arg_list_opt -> arg_list
Rule 79    arg_list_opt -> empty
Rule 80    arg_list -> arg_list COMMA expr
Rule 81    arg_list -> expr
Rule 82    empty -> <empty>

Terminals, with rules where they appear

AND                  : 50
ASSIGN               : 8 33
BOOL                 : 12
BREAK                : 28
CHAR                 : 13
CHAR_LITERAL         : 74
COMMA                : 18 80
CONTINUE             : 29
DIVIDE               : 64
ELIF                 : 37
ELSE                 : 39
EQ                   : 52
FALSE                : 73
FLOAT                : 11
FLOAT_LITERAL        : 71
FOR                  : 42
FUNC                 : 15
GE                   : 58
GT                   : 57
ID                   : 7 8 9 15 20 32 34 35 44 77
IF                   : 36
INPUT                : 44
INT                  : 10
INT_LITERAL          : 9 70
LBRACE               : 21
LBRACKET             : 9 35
LE                   : 56
LPAREN               : 15 32 36 37 41 42 43 44 69 77
LT                   : 55
MINUS                : 61 68
MOD                  : 65
NE                   : 53
NOT                  : 67
OR                   : 48
PLUS                 : 60
PRINT                : 43
RBRACE               : 21
RBRACKET             : 9 35
RETURN               : 45 46
RPAREN               : 15 32 36 37 41 42 43 44 69 77
SEMICOLON            : 7 8 9 22 26 27 28 29 31 42 42
STRING               : 14
STRING_LITERAL       : 75
TIMES                : 63
TRUE                 : 72
WHILE                : 41
error                : 

Nonterminals, with rules where they appear

additive_expr        : 55 56 57 58 59 60 61
arg_list             : 78 80
arg_list_opt         : 32 77
assignment           : 22 42 42
block                : 15 30 36 37 39 41 42
decl_or_stmt         : 2 3
decl_or_stmt_list    : 1 2 21
elif_part            : 36 37
else_part_opt        : 36
empty                : 17 38 40 79
equality_expr        : 50 51 52 53
expr                 : 8 33 35 36 37 41 42 43 45 69 80 81
factor               : 63 64 65 66 67 68
for_stmt             : 25
func_call            : 31
func_decl            : 5
if_stmt              : 23
io_stmt              : 26
location             : 33 76
logic_and_expr       : 48 49 50
logic_or_expr        : 47 48
param                : 18 19
param_list           : 16 18
param_list_opt       : 15
program              : 0
relational_expr      : 52 53 54 55 56 57 58
return_stmt          : 27
statement            : 6
term                 : 60 61 62 63 64 65
type                 : 7 8 9 20
var_decl             : 4
while_stmt           : 24

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . decl_or_stmt_list
    (2) decl_or_stmt_list -> . decl_or_stmt_list decl_or_stmt
    (3) decl_or_stmt_list -> . decl_or_stmt
    (4) decl_or_stmt -> . var_decl
    (5) decl_or_stmt -> . func_decl
    (6) decl_or_stmt -> . statement
    (7) var_decl -> . type ID SEMICOLON
    (8) var_decl -> . type ID ASSIGN expr SEMICOLON
    (9) var_decl -> . type ID LBRACKET INT_LITERAL RBRACKET SEMICOLON
    (15) func_decl -> . FUNC ID LPAREN param_list_opt RPAREN block
    (22) statement -> . assignment SEMICOLON
    (23) statement -> . if_stmt
    (24) statement -> . while_stmt
    (25) statement -> . for_stmt
    (26) statement -> . io_stmt SEMICOLON
    (27) statement -> . return_stmt SEMICOLON
    (28) statement -> . BREAK SEMICOLON
    (29) statement -> . CONTINUE SEMICOLON
    (30) statement -> . block
    (31) statement -> . func_call SEMICOLON
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . BOOL
    (13) type -> . CHAR
    (14) type -> . STRING
    (33) assignment -> . location ASSIGN expr
    (36) if_stmt -> . IF LPAREN expr RPAREN block elif_part else_part_opt
    (41) while_stmt -> . WHILE LPAREN expr RPAREN block
    (42) for_stmt -> . FOR LPAREN assignment SEMICOLON expr SEMICOLON assignment RPAREN block
    (43) io_stmt -> . PRINT LPAREN expr RPAREN
    (44) io_stmt -> . INPUT LPAREN ID RPAREN
    (45) return_stmt -> . RETURN expr
    (46) return_stmt -> . RETURN
    (21) block -> . LBRACE decl_or_stmt_list RBRACE
    (32) func_call -> . ID LPAREN arg_list_opt RPAREN
    (34) location -> . ID
    (35) location -> . ID LBRACKET expr RBRACKET

    FUNC            shift and go to state 9
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 22
    CHAR            shift and go to state 23
    STRING          shift and go to state 24
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    PRINT           shift and go to state 29
    INPUT           shift and go to state 30
    RETURN          shift and go to state 31
    LBRACE          shift and go to state 32
    ID              shift and go to state 8

    program                        shift and go to state 1
    decl_or_stmt_list              shift and go to state 2
    decl_or_stmt                   shift and go to state 3
    var_decl                       shift and go to state 4
    func_decl                      shift and go to state 5
    statement                      shift and go to state 6
    type                           shift and go to state 7
    block                          shift and go to state 10
    assignment                     shift and go to state 11
    if_stmt                        shift and go to state 12
    while_stmt                     shift and go to state 13
    for_stmt                       shift and go to state 14
    io_stmt                        shift and go to state 15
    return_stmt                    shift and go to state 16
    func_call                      shift and go to state 19
    location                       shift and go to state 25

state 1

    (0) S' -> program .



state 2

    (1) program -> decl_or_stmt_list .
    (2) decl_or_stmt_list -> decl_or_stmt_list . decl_or_stmt
    (4) decl_or_stmt -> . var_decl
    (5) decl_or_stmt -> . func_decl
    (6) decl_or_stmt -> . statement
    (7) var_decl -> . type ID SEMICOLON
    (8) var_decl -> . type ID ASSIGN expr SEMICOLON
    (9) var_decl -> . type ID LBRACKET INT_LITERAL RBRACKET SEMICOLON
    (15) func_decl -> . FUNC ID LPAREN param_list_opt RPAREN block
    (22) statement -> . assignment SEMICOLON
    (23) statement -> . if_stmt
    (24) statement -> . while_stmt
    (25) statement -> . for_stmt
    (26) statement -> . io_stmt SEMICOLON
    (27) statement -> . return_stmt SEMICOLON
    (28) statement -> . BREAK SEMICOLON
    (29) statement -> . CONTINUE SEMICOLON
    (30) statement -> . block
    (31) statement -> . func_call SEMICOLON
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . BOOL
    (13) type -> . CHAR
    (14) type -> . STRING
    (33) assignment -> . location ASSIGN expr
    (36) if_stmt -> . IF LPAREN expr RPAREN block elif_part else_part_opt
    (41) while_stmt -> . WHILE LPAREN expr RPAREN block
    (42) for_stmt -> . FOR LPAREN assignment SEMICOLON expr SEMICOLON assignment RPAREN block
    (43) io_stmt -> . PRINT LPAREN expr RPAREN
    (44) io_stmt -> . INPUT LPAREN ID RPAREN
    (45) return_stmt -> . RETURN expr
    (46) return_stmt -> . RETURN
    (21) block -> . LBRACE decl_or_stmt_list RBRACE
    (32) func_call -> . ID LPAREN arg_list_opt RPAREN
    (34) location -> . ID
    (35) location -> . ID LBRACKET expr RBRACKET

    $end            reduce using rule 1 (program -> decl_or_stmt_list .)
    FUNC            shift and go to state 9
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 22
    CHAR            shift and go to state 23
    STRING          shift and go to state 24
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    PRINT           shift and go to state 29
    INPUT           shift and go to state 30
    RETURN          shift and go to state 31
    LBRACE          shift and go to state 32
    ID              shift and go to state 8

    decl_or_stmt                   shift and go to state 33
    var_decl                       shift and go to state 4
    func_decl                      shift and go to state 5
    statement                      shift and go to state 6
    type                           shift and go to state 7
    block                          shift and go to state 10
    assignment                     shift and go to state 11
    if_stmt                        shift and go to state 12
    while_stmt                     shift and go to state 13
    for_stmt                       shift and go to state 14
    io_stmt                        shift and go to state 15
    return_stmt                    shift and go to state 16
    func_call                      shift and go to state 19
    location                       shift and go to state 25

state 3

    (3) decl_or_stmt_list -> decl_or_stmt .

    FUNC            reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    BREAK           reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    CONTINUE        reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    INT             reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    FLOAT           reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    BOOL            reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    CHAR            reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    STRING          reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    IF              reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    WHILE           reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    FOR             reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    PRINT           reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    INPUT           reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    RETURN          reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    LBRACE          reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    ID              reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    $end            reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)
    RBRACE          reduce using rule 3 (decl_or_stmt_list -> decl_or_stmt .)


state 4

    (4) decl_or_stmt -> var_decl .

    FUNC            reduce using rule 4 (decl_or_stmt -> var_decl .)
    BREAK           reduce using rule 4 (decl_or_stmt -> var_decl .)
    CONTINUE        reduce using rule 4 (decl_or_stmt -> var_decl .)
    INT             reduce using rule 4 (decl_or_stmt -> var_decl .)
    FLOAT           reduce using rule 4 (decl_or_stmt -> var_decl .)
    BOOL            reduce using rule 4 (decl_or_stmt -> var_decl .)
    CHAR            reduce using rule 4 (decl_or_stmt -> var_decl .)
    STRING          reduce using rule 4 (decl_or_stmt -> var_decl .)
    IF              reduce using rule 4 (decl_or_stmt -> var_decl .)
    WHILE           reduce using rule 4 (decl_or_stmt -> var_decl .)
    FOR             reduce using rule 4 (decl_or_stmt -> var_decl .)
    PRINT           reduce using rule 4 (decl_or_stmt -> var_decl .)
    INPUT           reduce using rule 4 (decl_or_stmt -> var_decl .)
    RETURN          reduce using rule 4 (decl_or_stmt -> var_decl .)
    LBRACE          reduce using rule 4 (decl_or_stmt -> var_decl .)
    ID              reduce using rule 4 (decl_or_stmt -> var_decl .)
    $end            reduce using rule 4 (decl_or_stmt -> var_decl .)
    RBRACE          reduce using rule 4 (decl_or_stmt -> var_decl .)


state 5

    (5) decl_or_stmt -> func_decl .

    FUNC            reduce using rule 5 (decl_or_stmt -> func_decl .)
    BREAK           reduce using rule 5 (decl_or_stmt -> func_decl .)
    CONTINUE        reduce using rule 5 (decl_or_stmt -> func_decl .)
    INT             reduce using rule 5 (decl_or_stmt -> func_decl .)
    FLOAT           reduce using rule 5 (decl_or_stmt -> func_decl .)
    BOOL            reduce using rule 5 (decl_or_stmt -> func_decl .)
    CHAR            reduce using rule 5 (decl_or_stmt -> func_decl .)
    STRING          reduce using rule 5 (decl_or_stmt -> func_decl .)
    IF              reduce using rule 5 (decl_or_stmt -> func_decl .)
    WHILE           reduce using rule 5 (decl_or_stmt -> func_decl .)
    FOR             reduce using rule 5 (decl_or_stmt -> func_decl .)
    PRINT           reduce using rule 5 (decl_or_stmt -> func_decl .)
    INPUT           reduce using rule 5 (decl_or_stmt -> func_decl .)
    RETURN          reduce using rule 5 (decl_or_stmt -> func_decl .)
    LBRACE          reduce using rule 5 (decl_or_stmt -> func_decl .)
    ID              reduce using rule 5 (decl_or_stmt -> func_decl .)
    $end            reduce using rule 5 (decl_or_stmt -> func_decl .)
    RBRACE          reduce using rule 5 (decl_or_stmt -> func_decl .)


state 6

    (6) decl_or_stmt -> statement .

    FUNC            reduce using rule 6 (decl_or_stmt -> statement .)
    BREAK           reduce using rule 6 (decl_or_stmt -> statement .)
    CONTINUE        reduce using rule 6 (decl_or_stmt -> statement .)
    INT             reduce using rule 6 (decl_or_stmt -> statement .)
    FLOAT           reduce using rule 6 (decl_or_stmt -> statement .)
    BOOL            reduce using rule 6 (decl_or_stmt -> statement .)
    CHAR            reduce using rule 6 (decl_or_stmt -> statement .)
    STRING          reduce using rule 6 (decl_or_stmt -> statement .)
    IF              reduce using rule 6 (decl_or_stmt -> statement .)
    WHILE           reduce using rule 6 (decl_or_stmt -> statement .)
    FOR             reduce using rule 6 (decl_or_stmt -> statement .)
    PRINT           reduce using rule 6 (decl_or_stmt -> statement .)
    INPUT           reduce using rule 6 (decl_or_stmt -> statement .)
    RETURN          reduce using rule 6 (decl_or_stmt -> statement .)
    LBRACE          reduce using rule 6 (decl_or_stmt -> statement .)
    ID              reduce using rule 6 (decl_or_stmt -> statement .)
    $end            reduce using rule 6 (decl_or_stmt -> statement .)
    RBRACE          reduce using rule 6 (decl_or_stmt -> statement .)


state 7

    (7) var_decl -> type . ID SEMICOLON
    (8) var_decl -> type . ID ASSIGN expr SEMICOLON
    (9) var_decl -> type . ID LBRACKET INT_LITERAL RBRACKET SEMICOLON

    ID              shift and go to state 34


state 8

    (32) func_call -> ID . LPAREN arg_list_opt RPAREN
    (34) location -> ID .
    (35) location -> ID . LBRACKET expr RBRACKET

    LPAREN          shift and go to state 35
    ASSIGN          reduce using rule 34 (location -> ID .)
    LBRACKET        shift and go to state 36


state 9

    (15) func_decl -> FUNC . ID LPAREN param_list_opt RPAREN block

    ID              shift and go to state 37


state 10

    (30) statement -> block .

    FUNC            reduce using rule 30 (statement -> block .)
    BREAK           reduce using rule 30 (statement -> block .)
    CONTINUE        reduce using rule 30 (statement -> block .)
    INT             reduce using rule 30 (statement -> block .)
    FLOAT           reduce using rule 30 (statement -> block .)
    BOOL            reduce using rule 30 (statement -> block .)
    CHAR            reduce using rule 30 (statement -> block .)
    STRING          reduce using rule 30 (statement -> block .)
    IF              reduce using rule 30 (statement -> block .)
    WHILE           reduce using rule 30 (statement -> block .)
    FOR             reduce using rule 30 (statement -> block .)
    PRINT           reduce using rule 30 (statement -> block .)
    INPUT           reduce using rule 30 (statement -> block .)
    RETURN          reduce using rule 30 (statement -> block .)
    LBRACE          reduce using rule 30 (statement -> block .)
    ID              reduce using rule 30 (statement -> block .)
    $end            reduce using rule 30 (statement -> block .)
    RBRACE          reduce using rule 30 (statement -> block .)


state 11

    (22) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 38


state 12

    (23) statement -> if_stmt .

    FUNC            reduce using rule 23 (statement -> if_stmt .)
    BREAK           reduce using rule 23 (statement -> if_stmt .)
    CONTINUE        reduce using rule 23 (statement -> if_stmt .)
    INT             reduce using rule 23 (statement -> if_stmt .)
    FLOAT           reduce using rule 23 (statement -> if_stmt .)
    BOOL            reduce using rule 23 (statement -> if_stmt .)
    CHAR            reduce using rule 23 (statement -> if_stmt .)
    STRING          reduce using rule 23 (statement -> if_stmt .)
    IF              reduce using rule 23 (statement -> if_stmt .)
    WHILE           reduce using rule 23 (statement -> if_stmt .)
    FOR             reduce using rule 23 (statement -> if_stmt .)
    PRINT           reduce using rule 23 (statement -> if_stmt .)
    INPUT           reduce using rule 23 (statement -> if_stmt .)
    RETURN          reduce using rule 23 (statement -> if_stmt .)
    LBRACE          reduce using rule 23 (statement -> if_stmt .)
    ID              reduce using rule 23 (statement -> if_stmt .)
    $end            reduce using rule 23 (statement -> if_stmt .)
    RBRACE          reduce using rule 23 (statement -> if_stmt .)


state 13

    (24) statement -> while_stmt .

    FUNC            reduce using rule 24 (statement -> while_stmt .)
    BREAK           reduce using rule 24 (statement -> while_stmt .)
    CONTINUE        reduce using rule 24 (statement -> while_stmt .)
    INT             reduce using rule 24 (statement -> while_stmt .)
    FLOAT           reduce using rule 24 (statement -> while_stmt .)
    BOOL            reduce using rule 24 (statement -> while_stmt .)
    CHAR            reduce using rule 24 (statement -> while_stmt .)
    STRING          reduce using rule 24 (statement -> while_stmt .)
    IF              reduce using rule 24 (statement -> while_stmt .)
    WHILE           reduce using rule 24 (statement -> while_stmt .)
    FOR             reduce using rule 24 (statement -> while_stmt .)
    PRINT           reduce using rule 24 (statement -> while_stmt .)
    INPUT           reduce using rule 24 (statement -> while_stmt .)
    RETURN          reduce using rule 24 (statement -> while_stmt .)
    LBRACE          reduce using rule 24 (statement -> while_stmt .)
    ID              reduce using rule 24 (statement -> while_stmt .)
    $end            reduce using rule 24 (statement -> while_stmt .)
    RBRACE          reduce using rule 24 (statement -> while_stmt .)


state 14

    (25) statement -> for_stmt .

    FUNC            reduce using rule 25 (statement -> for_stmt .)
    BREAK           reduce using rule 25 (statement -> for_stmt .)
    CONTINUE        reduce using rule 25 (statement -> for_stmt .)
    INT             reduce using rule 25 (statement -> for_stmt .)
    FLOAT           reduce using rule 25 (statement -> for_stmt .)
    BOOL            reduce using rule 25 (statement -> for_stmt .)
    CHAR            reduce using rule 25 (statement -> for_stmt .)
    STRING          reduce using rule 25 (statement -> for_stmt .)
    IF              reduce using rule 25 (statement -> for_stmt .)
    WHILE           reduce using rule 25 (statement -> for_stmt .)
    FOR             reduce using rule 25 (statement -> for_stmt .)
    PRINT           reduce using rule 25 (statement -> for_stmt .)
    INPUT           reduce using rule 25 (statement -> for_stmt .)
    RETURN          reduce using rule 25 (statement -> for_stmt .)
    LBRACE          reduce using rule 25 (statement -> for_stmt .)
    ID              reduce using rule 25 (statement -> for_stmt .)
    $end            reduce using rule 25 (statement -> for_stmt .)
    RBRACE          reduce using rule 25 (statement -> for_stmt .)


state 15

    (26) statement -> io_stmt . SEMICOLON

    SEMICOLON       shift and go to state 39


state 16

    (27) statement -> return_stmt . SEMICOLON

    SEMICOLON       shift and go to state 40


state 17

    (28) statement -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 41


state 18

    (29) statement -> CONTINUE . SEMICOLON

    SEMICOLON       shift and go to state 42


state 19

    (31) statement -> func_call . SEMICOLON

    SEMICOLON       shift and go to state 43


state 20

    (10) type -> INT .

    ID              reduce using rule 10 (type -> INT .)


state 21

    (11) type -> FLOAT .

    ID              reduce using rule 11 (type -> FLOAT .)


state 22

    (12) type -> BOOL .

    ID              reduce using rule 12 (type -> BOOL .)


state 23

    (13) type -> CHAR .

    ID              reduce using rule 13 (type -> CHAR .)


state 24

    (14) type -> STRING .

    ID              reduce using rule 14 (type -> STRING .)


state 25

    (33) assignment -> location . ASSIGN expr

    ASSIGN          shift and go to state 44


state 26

    (36) if_stmt -> IF . LPAREN expr RPAREN block elif_part else_part_opt

    LPAREN          shift and go to state 45


state 27

    (41) while_stmt -> WHILE . LPAREN expr RPAREN block

    LPAREN          shift and go to state 46


state 28

    (42) for_stmt -> FOR . LPAREN assignment SEMICOLON expr SEMICOLON assignment RPAREN block

    LPAREN          shift and go to state 47


state 29

    (43) io_stmt -> PRINT . LPAREN expr RPAREN

    LPAREN          shift and go to state 48


state 30

    (44) io_stmt -> INPUT . LPAREN ID RPAREN

    LPAREN          shift and go to state 49


state 31

    (45) return_stmt -> RETURN . expr
    (46) return_stmt -> RETURN .
    (47) expr -> . logic_or_expr
    (48) logic_or_expr -> . logic_or_expr OR logic_and_expr
    (49) logic_or_expr -> . logic_and_expr
    (50) logic_and_expr -> . logic_and_expr AND equality_expr
    (51) logic_and_expr -> . equality_expr
    (52) equality_expr -> . equality_expr EQ relational_expr
    (53) equality_expr -> . equality_expr NE relational_expr
    (54) equality_expr -> . relational_expr
    (55) relational_expr -> . relational_expr LT additive_expr
    (56) relational_expr -> . relational_expr LE additive_expr
    (57) relational_expr -> . relational_expr GT additive_expr
    (58) relational_expr -> . relational_expr GE additive_expr
    (59) relational_expr -> . additive_expr
    (60) additive_expr -> . additive_expr PLUS term
    (61) additive_expr -> . additive_expr MINUS term
    (62) additive_expr -> . term
    (63) term -> . term TIMES factor
    (64) term -> . term DIVIDE factor
    (65) term -> . term MOD factor
    (66) term -> . factor
    (67) factor -> . NOT factor
    (68) factor -> . MINUS factor
    (69) factor -> . LPAREN expr RPAREN
    (70) factor -> . INT_LITERAL
    (71) factor -> . FLOAT_LITERAL
    (72) factor -> . TRUE
    (73) factor -> . FALSE
    (74) factor -> . CHAR_LITERAL
    (75) factor -> . STRING_LITERAL
    (76) factor -> . location
    (77) factor -> . ID LPAREN arg_list_opt RPAREN
    (34) location -> . ID
    (35) location -> . ID LBRACKET expr RBRACKET
